Fix content header color
Was set to be white even with white background,
so it was invisible. Now it adapts to selected
theme.

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -291,7 +291,7 @@ main {
 
 /*DOM Elements*/
 .content-header {
-    color: var(--off-white);
+    color: var(--color-base-text);
     font-size: calc(3.25rem*0.55);
     font-weight: 500;
     text-transform: capitalize;
